syntax = "proto3";

package neakxs.authorize;

option go_package = "github.com/Neakxs/protoc-gen-authz/authorize";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    Rule rule = 13377;
}

message Rule {
    string expr = 1;
}

message AuthorizationContext {
    message Peer {
        string addr = 1;
        string auth_info = 2;
    }
    message MetadataValue {
        repeated string values = 1;
    }
    Peer peer = 1;
    map<string,MetadataValue> metadata = 2;
}