syntax = "proto3";

package testdata;
option go_package = "github.com/Neakxs/protoc-gen-autz/testdata";

import "google/protobuf/empty.proto";

service TestService {
    rpc Ping(PingRequest) returns (google.protobuf.Empty) {};
}

message PingRequest {
    string ping = 1;
}